--- a/style.css
+++ b/style.css
@@ -869,18 +869,20 @@ font-size: 25px;
     padding-bottom: 30px;
      position: relative;
      top: 0px;
+   font-size:10px;
 }
 
 .r h1{
     position: relative;
     top: 0px;
     color: black;
-
+   font-size:15px;
+  
 }
 
 .r button{
     position: relative;
-    top: 100px;
+    top: 0px;
     font-weight: bolder;
    background: red;
    border-radius: 100px;
