--- a/style.css
+++ b/style.css
@@ -41,59 +41,6 @@ body{
 
 
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #000;
-        padding: 10px 20px;
-        color: #fff;
-    }
-    
-    .menu-icon {
-        display: none;
-        font-size: 20px;
-        cursor: pointer;
-    }
-    
-    .menu {
-        list-style: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
-    
-    }
-    
-    .menu li {
-        margin-left: 20px;
-    }
-    
-    .menu a {
-        text-decoration: none;
-        color:white;
-    }
-    
-    @media (max-width: 768px) {
-        .menu {
-            display: none;
-            flex-direction: column;
-            width: 100%;
-            padding-top: 20px;
-        }
-        
-        .menu-icon {
-            display: block;
-        }
-        
-        .menu li {
-            margin-left: 0;
-            text-align: center;
-            padding: 10px 0;
-        }
-    }
-    
-    
-    
 
 
 
@@ -134,31 +81,27 @@ body{
     top: 90px;
 }
 .on button{
-   
+    position: relative;
+    top: 90px;
      font-weight: bolder;
-    background:  rgb(207, 45, 45);
+    background:white;
     border-radius: 100px;
-    padding: 15px;
+    padding: 16px;
     width: 120px;
     color: black;
-    border-color:  rgb(207, 45, 45);
-    position: relative;
-    top: 90px;
-    
-}
-
-.on button:hover{
-   
     border-color: white;
-    background: white;
-    color: black;
-    position: relative;
-    top: 90px;
-}
 
+}
+.on button:hover{
+
+    border-color: blue;
+    background: blue;
+    color: white;
+  
+}
 .n{
-    width: 110%;
-    height: 260px;
+    width: 100%;
+    height: 240px;
     padding-top: 90px;
     }
 
@@ -209,25 +152,18 @@ body{
         }
              
         .on button{
-            transform: translatey(140px);
-             font-weight: bolder;
-            background:  white;
-            border-radius: 100px;
-            padding: 15px;
-            width: 120px;
-            color: black;
-            border-color: white;
             position: relative;
             top: 0px;
-            
-        }
-        
-        .on button:hover{
             transform: translatey(140px);
+           font-size: 10px;
+             font-weight: bolder;
+            background:white;
+            border-radius: 100px;
+            padding: 9px;
+            width: 90px;
+            color: black;
             border-color: white;
-            background:transparent;
-            color: white;
-          
+        
         }
     
     }
@@ -277,7 +213,6 @@ body{
     padding: 40px;
     padding-right: 66px;
     gap: 70px;
-    background: white;
 }
 
 .i{
@@ -300,6 +235,7 @@ body{
 
 }
 
+
 .x h1{
 
     color: white;
@@ -309,6 +245,7 @@ body{
 
 }
 
+
 .x p{
     position: relative;
     top: 100px;
@@ -317,28 +254,29 @@ body{
 
 }
 
+
 .x button{
     position: relative;
- top: 100px;
+    top: 100px;
+    
      font-weight: bolder;
-    background:  white;
+    background: white;
     border-radius: 100px;
     padding: 15px;
     width: 120px;
     color: black;
     border-color: white;
- 
-    
+
 }
 
 .x button:hover{
-    
-    border-color: white;
-    background: transparent;
+
+    border-color: blue;
+    background: blue;
     color: white;
-    position: relative;
-    top: 100px;
+  
 }
+
 
 
 @media (max-width:768px) {
@@ -356,7 +294,7 @@ body{
         width: 100%;
         height:auto ;
         padding-bottom: 0px;
-        padding-top: 100px;
+        padding-top: 0px;
        
         
           }
@@ -396,7 +334,7 @@ body{
     .x button{
         transform: translatey(140px);
          font-weight: bolder;
-        background:  white;
+        background: white;
         border-radius: 100px;
         padding: 15px;
         width: 120px;
@@ -409,8 +347,8 @@ body{
     
     .x button:hover{
         transform: translatey(140px);
-        border-color: white;
-        background: transparent;
+        border-color: blue;
+        background: blue;
         color: white;
       
     }
@@ -455,8 +393,7 @@ body{
 
 .u{
     display: flex;
-    gap: 12px;
-   
+  
 }
 
 .t{
@@ -478,14 +415,14 @@ body{
     color: white;
     font-size: 25px;
    position: relative;
-   top: 100px;
+   top: 50px;
 }
 .t p{
     font-size: 20px;
     color: gainsboro;
     padding-bottom: 10px;
     position: relative;
-    top: 100px;
+    top: 50px;
 }
 .t button{
     position: relative;
@@ -510,34 +447,30 @@ body{
 .s{
     padding: 20px;
     display: grid;
-    gap: 5px;
-    background: blueiolet;
+    gap: 6px;
+    background: black;
     width: 50%;
-  
+
 }
 
 .e{
-  
     font-size: 40px;
     width: 90%;
     padding: 20px;
     background: transparent;
     border: none;
-    border-bottom: solid;
-    border-color: white;
- 
 }
 
 input:focus{
 border-style: none;
-outline: none;
 
 }
 
 ::placeholder{
-    color: white;
-    font-size: 25px;
-    }
+color: white;
+font-size: 25px;
+}
+
 
 @media (max-width:768px) {
    
@@ -558,7 +491,7 @@ outline: none;
            height: 430px;
            text-align: center;
            width: 100%;
-           padding-bottom: 18px;
+
         }
            
         .t h1{
@@ -566,8 +499,7 @@ outline: none;
             color: black;
             transform: translatey(140px);
             font-size: 35px;  
-            position: relative;
-            top: 10px;
+         
         
         }
         
@@ -575,11 +507,9 @@ outline: none;
             transform: translatey(140px);
             color: black;
             padding: 0px;
-            position: relative;
-            top: 10px;
-       
-        }
         
+        }
+         
         .t button{
             transform: translatey(140px);
              font-weight: bolder;
@@ -602,7 +532,8 @@ outline: none;
         
         
 .s{
-    width: 90%;
+    background: red;
+    width: 92%;
 
 }
 
@@ -662,9 +593,9 @@ font-size: 25px;
 
 .o{
 
-    width: 100%;
+    width: 110%;
     height: 240px;
-    padding-top: 80px;
+    padding-top: 0px;
     }
 
 .w{
@@ -679,12 +610,14 @@ font-size: 25px;
    padding-top: 0px;
 }
 
+
 .w h1{
 
     color: white;
     position: relative;
     top: 90px
 }
+
 
 .w p{
     position: relative;
@@ -694,38 +627,38 @@ font-size: 25px;
 
 }
 
+
 .w button{
-   
+    position: relative;
+    top: 90px;
      font-weight: bolder;
-    background:  white;
+    background: white;
     border-radius: 100px;
     padding: 15px;
     width: 120px;
     color: black;
     border-color: white;
-    position: relative;
-    top: 90px;
-    
+
 }
 
 .w button:hover{
-    
-    border-color: white;
-    background: transparent;
-    color: white;
     position: relative;
     top: 90px;
+    border-color: blue;
+    background: blue;
+    color: white;
+  
 }
+
 
 
 @media (max-width:768px) {
    
 
 .k{
-   
     display: block;
     padding: 0px;
-  
+   
     }
        
     
@@ -733,14 +666,14 @@ font-size: 25px;
     
         width: 100%;
         height:auto ;
-        padding-bottom: 0px;
-        padding-top: 100px;
-   
+        padding-bottom: 80px;
+        padding-top: 30px;
+       
         
           }
-            
+           
+    
     .w{
-   
         background-image: url("bg-1.png");
         background-repeat: no-repeat;
         background-position: center;
@@ -749,8 +682,6 @@ font-size: 25px;
        height: 430px;
        text-align: center;
        width: 100%;
-   
-   
     }
        
     .w h1{
@@ -774,7 +705,7 @@ font-size: 25px;
     .w button{
         transform: translatey(140px);
          font-weight: bolder;
-        background:  white;
+        background: white;
         border-radius: 100px;
         padding: 15px;
         width: 120px;
@@ -782,17 +713,15 @@ font-size: 25px;
         border-color: white;
         position: relative;
         top: 0px;
-        
     }
     
     .w button:hover{
         transform: translatey(140px);
-        border-color: white;
-        background: transparent;
+        border-color: blue;
+        background: blue;
         color: white;
       
     }
-    
     
     
 }
@@ -845,10 +774,10 @@ font-size: 25px;
     font-weight: bold;
     font-style: italic;
 }
-
 .j h1 {
     color: white;
 }
+
 
 .j img{
         background: wheat;
@@ -859,7 +788,7 @@ font-size: 25px;
 .r{
     background:white;
     text-align: center;
-    padding: 10px;
+    padding: 40px;
 
   
 }
@@ -868,21 +797,19 @@ font-size: 25px;
    color: black;
     padding-bottom: 30px;
      position: relative;
-     top: 100px;
-   font-size:10px;
+     top: 0px;
 }
 
 .r h1{
     position: relative;
-    top: 100px;
+    top: 0px;
     color: black;
-   font-size:15px;
-  
+
 }
 
 .r button{
     position: relative;
-    top: 100px;
+    top: 0px;
     font-weight: bolder;
    background: red;
    border-radius: 100px;
@@ -904,9 +831,8 @@ font-size: 25px;
 @media (max-width:768px) {
 
     .h{
-        
+        background: red;
         display: block;
-
     }
     
     .j{
@@ -926,7 +852,7 @@ font-size: 25px;
         text-align: center;
         padding: 40px;
          position: relative;
-         top: 0px;
+         top: 90px;
          height:400px;
       
     }
@@ -940,7 +866,7 @@ font-size: 25px;
     .r button{
     
         font-weight: bolder;
-       background: o rgb(207, 45, 45)range;
+       background: white;
        border-radius: 100px;
        padding: 15px;
        width: 120px;
@@ -951,8 +877,8 @@ font-size: 25px;
     
     .r button:hover{
     
-       border-color:  orange;
-       background: orange;
+       border-color: blue;
+       background: blue;
        color: white;
      
     }
@@ -1157,8 +1083,4 @@ background: black;
 
 
 
-.end{
-    text-align: center;
-    font-size: 10px;
-    color: white;
-}
+
