--- a/style.css
+++ b/style.css
@@ -209,28 +209,27 @@ body{
         }
              
         .on button{
-            transform: translatey(140px);
-             font-weight: bolder;
-            background:  white;
-            border-radius: 100px;
-            padding: 15px;
-            width: 120px;
-            color: black;
-            border-color: white;
-            position: relative;
-            top: 0px;
-            
-        }
-        
-        .on button:hover{
-            transform: translatey(140px);
-            border-color: white;
-            background:transparent;
-            color: white;
-          position: relative;
-        top: 0px;
-        }
+   
+     font-weight: bolder;
+    background:  rgb(207, 45, 45);
+    border-radius: 100px;
+    padding: 15px;
+    width: 120px;
+    color: black;
+    border-color:  rgb(207, 45, 45);
+    position: relative;
+    top: 90px;
     
+}
+
+.on button:hover{
+   
+    border-color: white;
+    background: white;
+    color: black;
+    position: relative;
+    top: 90px;
+}
     }
     
 
@@ -305,14 +304,14 @@ body{
 
     color: white;
  position: relative;
- top: 100px;
+ top: 90px;
  
 
 }
 
 .x p{
     position: relative;
-    top: 100px;
+    top: 90px;
     color: gainsboro;
     padding-bottom: 10px;
 
@@ -320,7 +319,7 @@ body{
 
 .x button{
     position: relative;
- top: 100px;
+ top: 90px;
      font-weight: bolder;
     background:  white;
     border-radius: 100px;
@@ -338,7 +337,7 @@ body{
     background: transparent;
     color: white;
     position: relative;
-    top: 100px;
+    top: 90px;
 }
 
 
@@ -948,11 +947,11 @@ font-size: 25px;
     .r button{
     
         font-weight: bolder;
-       background: o rgb(207, 45, 45)range;
+       background: rgb(207, 45, 45)range;
        border-radius: 100px;
        padding: 15px;
        width: 120px;
-       color: black;
+       color: white;
        border-color: white;
     
     }
