--- a/style.css
+++ b/style.css
@@ -134,24 +134,24 @@ body{
     top: 90px;
 }
 .on button{
-    position: relative;
- top: 90px;
+   
      font-weight: bolder;
-    background:  white;
+    background:  rgb(207, 45, 45);
     border-radius: 100px;
     padding: 15px;
     width: 120px;
     color: black;
-    border-color: white;
- 
+    border-color:  rgb(207, 45, 45);
+    position: relative;
+    top: 90px;
     
 }
 
 .on button:hover{
-    
+   
     border-color: white;
-    background: transparent;
-    color: white;
+    background: white;
+    color: black;
     position: relative;
     top: 90px;
 }
@@ -209,28 +209,27 @@ body{
             top: 0px;
         }
              
-        .on button{
-    position: relative;
- top: 0px;
-     font-weight: bolder;
-    background:  white;
-    border-radius: 100px;
-    padding: 15px;
-    width: 120px;
-    color: black;
-    border-color: white;
- 
-    
-}
-
-.on button:hover{
-    
-    border-color: white;
-    background: transparent;
-    color: white;
-    position: relative;
-    top: 0px;
-}
+           .on button{
+            transform: translatey(140px);
+             font-weight: bolder;
+            background:  white;
+            border-radius: 100px;
+            padding: 15px;
+            width: 120px;
+            color: black;
+            border-color: white;
+            position: relative;
+            top: 0px;
+            
+        }
+        
+        .on button:hover{
+            transform: translatey(140px);
+            border-color: white;
+            background:transparent;
+            color: white;
+          
+        }
 
     }
     
