--- a/style.css
+++ b/style.css
@@ -136,12 +136,12 @@ body{
 .on button{
    
      font-weight: bolder;
-    background:  rgb(207, 45, 45);
+    background: white;
     border-radius: 100px;
     padding: 15px;
     width: 120px;
     color: black;
-    border-color:  rgb(207, 45, 45);
+    border-color:white;
     position: relative;
     top: 90px;
     
