--- a/style.css
+++ b/style.css
@@ -228,7 +228,9 @@ body{
             border-color: white;
             background:transparent;
             color: white;
-          
+          position: relative;
+            top: 0px;
+            
         }
 
     }
@@ -295,7 +297,7 @@ body{
         background-position: center;
         background-size: contain;
        padding:0px;
-       height: 400px;
+       height: 300px;
        text-align: center;
        width: 60%;
 
