--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ body{
             width: 120px;
             color: black;
             border-color: white;
+              transform: translatey(140px);
             position: relative;
             top: 0px;
             
@@ -228,6 +229,7 @@ body{
             border-color: white;
             background:transparent;
             color: white;
+           transform: translatey(140px);
           position: relative;
             top: 0px;
             
