--- a/style.css
+++ b/style.css
@@ -613,7 +613,7 @@ color:white;
 }
 
 .e{
-    font-size: 40px;
+    font-size: 25px;
     width: 83%;
     padding: 26px;
     background: transparent;
@@ -1119,10 +1119,22 @@ background: black;
 }
 
 .in input{
-    width: 97%;
+    width: 100%;
     height: 40px;
-   background:brown;
-   
+    background: white;
+    padding: 10px;
+}
+
+
+.in input::placeholder{
+    font-size:20px;
+    color:black;
+}
+
+
+.in input:focus{
+     font-size:20px;
+    color:black;
 }
 
 
